# whispr

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  overlay.py  pyproject.toml  requirements.txt  settings.py  setup-deps.sh  tray.py  tray_applet.py  whispr-autostart.desktop  whispr.desktop  whispr.py
